# TRAX

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LLM_AI_CONSUMPTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: dag_benches.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: RUNBOOK.md
examples/: aaip_scenario.rs  handshake_client.rs  handshake_server.rs  mint_vectors.rs
src/: admission.rs  admission_dag.rs  crypto.rs  dag.rs  encoding.rs  errors.rs  lib.rs  python.rs  rate.rs  replay.rs  rotation.rs  session.rs  types.rs
tests/: conformance.rs  test_python_bindings.py  test_tcp_packet0_local.py  vectors.rs
vectors/: README.md  bad_signature.cbor  compromise_quarantine_signal.cbor  cose_sign1_valid.cbor  deterministic_cbor_valid.cbor  fork_equivocation_pair.cbor  replayed_nonce.cbor  rotation_proof_valid.cbor  segment_proof_corrupt.cbor  segment_proof_valid.cbor  stale_counter.cbor  unsupported_alg.cbor
