[package]
name = "aaicp-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AAICP v1.1.0 core library: canonical encoding, handshake/session, DAG trust chain, rotation/quarantine, rate limiting."
repository = "https://example.com/aaicp-core" # update me
keywords = ["aaicp", "aaip", "agents", "security", "dag"]

[features]
default = ["crypto-ed25519", "hash-blake3", "serde"]
no_std = []
crypto-ed25519 = ["ed25519-dalek"]
crypto-x25519 = ["x25519-dalek"]
hash-blake3 = ["blake3"]
hash-sha2 = ["sha2"]
serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
coset = "0.3.8"
ciborium = { version = "0.2.2" }
half = "2.4"
ed25519-dalek = { version = "2", optional = true, default-features = false, features = ["rand_core"] }
x25519-dalek = { version = "2", optional = true, default-features = false }
rand_core = "0.6"
blake3 = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
hkdf = "0.12"
lru = "0.12"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "dag_benches"
harness = false
